# async-bagit-rs

./: .gitignore  Cargo.toml  changelog.md  license-apache  readme.md
.github/workflows/: coverage.yml  rust.yml
examples/: blake3_generate.rs  read_zstd_archive.rs  zstd_archive.rs
src/: algorithm.rs  checksum.rs  generate.rs  lib.rs  manifest.rs  metadata.rs  payload.rs  read.rs
src/metadata/: file.rs
tests/: sample-bag.tar.zst
tests/sample-bag/: bag-info.txt  manifest-sha256.txt  manifest-sha512.txt
tests/sample-bag/data/: bagit.md  sources.csv
