[package]
name = "bagit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bagit", "bag-it", "bag", "bags", "rfc-8493"]
description = "Handle BagIt bags"
repository = "https://github.com/deadbaed/bagit-rs"

[features]
default = ["generate"]
generate = []

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["fs", "rt", "io-util"] }
digest = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
sha2 = "0.10"
md-5 = "0.10"
tempfile = "3"
