[package]
name = "bagit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bag-it", "bags", "rfc-8493", "async", "tokio"]
description = "Handle BagIt bags"
repository = "https://github.com/deadbaed/bagit-rs"

[features]
default = ["generate"]
generate = []

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["fs", "rt", "io-util"] }
digest = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sha2 = "0.10"
md-5 = "0.10"
tempfile = "3"
blake3 = { version = "1", features = ["traits-preview"] }
tokio-tar = "0.3" # lookout for https://github.com/dignifiedquire/async-tar/pull/41
async-compression = { version = "0.4", features = ["tokio", "zstdmt"] }

[[example]]
name = "blake3_generate"
required-features = ["generate"]

[[example]]
name = "zstd_archive"
