[package]
name = "async_bagit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bag-it", "bags", "rfc-8493", "async", "tokio"]
description = "Create and load BagIt containers"
repository = "https://github.com/deadbaed/async-bagit-rs"

[features]
default = ["generate"]
generate = ["dep:futures"]

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["fs", "rt", "io-util"] }
digest = "0.10"
hex = "0.4"
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sha2 = "0.10"
md-5 = "0.10"
async-tempfile = "0.6"
blake3 = { version = "1", features = ["traits-preview"] }
tokio-tar = "0.3" # lookout for https://github.com/dignifiedquire/async-tar/pull/41
async-compression = { version = "0.4", features = ["tokio", "zstdmt"] }

[[example]]
name = "blake3_generate"
required-features = ["generate"]

[[example]]
name = "read_zstd_archive"

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation https://stackoverflow.com/a/61417700/4809297
rustdoc-args = ["--cfg", "docsrs"]
